[project]
name = "coughoverflow"
version = "0.1.0"
description = ""
authors = [
    {name = "24msingh24",email = "manandeep1500@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "celery[sqs]>=5.5.2,<6.0.0",
    "redis>=6.0.0,<7.0.0",
    "boto3>=1.38.6,<2.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
